2007-11-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Set precision back to 1.
	* src/ConsoleStatCalc.cc (calculateStat)

2007-11-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Replaced strtol with Util::parseInt
	* src/ChunkedEncoding.cc
	* src/HttpConnection.cc
	* src/CookieBoxFactory.cc
	* src/ParameterizedStringParser.cc
	* src/Util.cc
	* test/UtilTest.cc
	* test/OptionHandlerTest.cc
	* src/Request.cc

	Throw exception when empty string is given. The message for exception
	changed.
	* src/Util.cc (parseInt)(parseLLInt)
	* src/message.h

2007-11-22  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Set precision to 2 because share ratio is rounded into 1.0 if precision
	set to 1.
	* src/ConsoleStatCalc.cc (calculateStat)

2007-11-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Preallocate non-requested file which is adjacent forward to requested
	file('requested' files means the files given in --select-file option)
	if they share a same piece.
	This fixes long pause in the file system which doesn't support sparse
	files like FAT32 while downloading.
	* src/MultiFileAllocationIterator.{h, cc}
	* test/MultiFileAllocationIteratorTest.cc
	* src/FileEntry.{h, cc}

	Removed unused _option.
	* src/MultiDiskAdaptor.h
	* test/MultiDiskAdaptorTest.cc
	* src/DefaultPieceStorage.cc

	Set the default value of --seed-ratio to 1.0.
	If 0.0 is given, then seeding continues regardless of share ratio.
	* src/version_usage.cc
	* src/option_processing.cc
	* src/BtSetup.cc
	* doc/aria2c.1.txt
	* doc/aria2c.1

	Fixed: Selective download is not working in BitTorrent
	* src/RequestGroup.cc

	Introduced Sequence class. Use this instead of Util::unfoldRange()
	* src/PieceStorage.h
	* test/MockPieceStorage.h
	* src/UnknownLengthPieceStorage.h
	* src/DefaultPieceStorage.{h, cc}
	* src/Metalink2RequestGroup.cc
	* src/RequestGroup.cc
	* src/Sequence.h
	* test/SequenceTest.cc
	* src/IntSequence.h
	* src/message.h
	* src/Util.{h, cc}
	* test/UtilTest.cc
